<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:background="@color/bg">

	<TextView
			android:id="@+id/sound"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:text="@string/audio_prompt"
			android:textSize="@dimen/header" android:background="@color/widget" android:textColor="@color/black"/>

	<TextView
			android:id="@+id/textView"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:text="@string/audio_warning"
			android:textSize="@dimen/content"
			android:background="@color/bg"
			android:textColor="@color/black"/>

	<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="0dip"
			android:layout_weight="1" >
		<Button
				android:id="@+id/start"
				android:layout_width="0dip"
				android:layout_height="match_parent"
				android:layout_weight="1"
				android:text="@string/start_record"
				style="@android:style/Widget.Button"
				android:textSize="@dimen/buttonText"/>

		<Button
				android:id="@+id/stop"
				android:layout_width="0dip"
				android:layout_height="match_parent"
				android:layout_weight="1"
				android:text="@string/stop_record"
				style="@android:style/Widget.Button"
				android:textSize="@dimen/buttonText"/>
	</LinearLayout>

	<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="0dip"
			android:layout_weight="1" >

		<Button
				android:id="@+id/play"
				android:layout_width="0dip"
				android:layout_height="match_parent"
				android:layout_weight="1"
				android:text="@string/start_play"
				style="@android:style/Widget.Button"
				android:textSize="@dimen/buttonText"/>

		<Button
				android:id="@+id/stopPlay"
				android:layout_width="0dip"
				android:layout_height="match_parent"
				android:layout_weight="1"
				android:text="@string/stop_play"
				style="@android:style/Widget.Button"
				android:textSize="@dimen/buttonText"/>
	</LinearLayout>

	<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="0dip"
			android:layout_weight="1" >

		<Button
				android:id="@+id/playFile"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:text="@string/audio_play_file"
				style="@android:style/Widget.Button"
				android:textSize="@dimen/buttonText"/>
	</LinearLayout>

	<include layout="@layout/bottom_button" />

</LinearLayout>