<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:scrollbars="vertical" android:background="@color/bg">

	<CheckBox
			android:id="@+id/cbSuspendResumeS3"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/suspend_resume_s3"
			android:checked="true" style="@android:style/Widget.CompoundButton.CheckBox"
			android:textColor="@color/black" android:textSize="15sp"/>

	<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content" >

		<TextView
				android:id="@+id/tvSuspendResumeTime"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/suspend_time"
				android:textSize="15sp"
				android:textColor="@color/black"
				android:labelFor="@+id/tbSuspendResumeTime"/>

		<EditText
				android:id="@+id/tbSuspendResumeTime"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:ems="10"
				android:text="@string/suspend_time_default"
				android:inputType="number"
				android:textColor="@color/black"
				style="@android:style/Widget.EditText"
				android:textSize="15sp">

		</EditText>

	</LinearLayout>

	<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content" >

		<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/suspend_number"
				android:textSize="15sp"
				android:textColor="@color/black"
				android:labelFor="@+id/tbSuspendResumeNumber"/>

		<EditText
				android:id="@+id/tbSuspendResumeNumber"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:ems="10"
				android:text="@string/suspend_number_default"
				android:inputType="number" android:textColor="@color/black" style="@android:style/Widget.EditText"
				android:textSize="15sp">
		</EditText>

	</LinearLayout>

	<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content" >

		<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/suspend_interval"
				android:textSize="15sp"
				android:textColor="@color/black"
				android:labelFor="@+id/tbSuspendResumeInterval"/>

		<EditText
				android:id="@+id/tbSuspendResumeInterval"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:ems="10"
				android:text="@string/suspend_interval_default"
				android:inputType="number" android:textColor="@color/black" style="@android:style/Widget.EditText"
				android:textSize="15sp"/>

	</LinearLayout>

	<Button
			android:id="@+id/btSuspendResumeStart"
			android:layout_width="match_parent"
			android:layout_height="@dimen/buttonHeight"
			android:text="@string/start"
			style="@android:style/Widget.Button"
			android:textSize="@dimen/buttonText"/>

	<TextView
			android:id="@+id/tvSuspendResumeStatus"
			android:layout_width="match_parent"
			android:layout_height="0dip"
			android:layout_weight="1"
			android:ems="10"
			android:focusable="false"
			android:focusableInTouchMode="false"
			android:gravity="top|left"
			android:inputType="none" android:textSize="15sp" android:textColor="@color/black"/>

	<include layout="@layout/bottom_button" />

</LinearLayout>