<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical" android:background="@color/bg">

	<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal" android:gravity="center_vertical">

		<TextView
				android:layout_width="0dip"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:text="@string/headset_status"
				android:textSize="@dimen/header"
				android:textColor="@color/black">
		</TextView>

		<TextView
				android:id="@+id/headsetState"
				android:layout_width="0dip"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:text="@string/headset_unplugged"
				android:textSize="@dimen/header" android:textColor="@color/black">
		</TextView>

	</LinearLayout>

	<Button android:id="@+id/btPlayMusic"
	        android:layout_width="fill_parent"
	        android:layout_height="0dip"
	        android:layout_weight="3"
	        android:text="@string/play_music"
	        style="@android:style/Widget.Button"
	        android:layout_marginTop="10dp"
	        android:textSize="@dimen/buttonText"/>

	<LinearLayout android:id="@+id/llHeadsetKey" android:layout_width="fill_parent"
	              android:layout_height="0dip"
	              android:layout_weight="3"
	              android:gravity="center_vertical"
	              android:layout_marginTop="10dp"
	              android:visibility="invisible">

		<TextView android:layout_width="0dp"
		          android:layout_height="wrap_content"
		          android:text="@string/headset_button"
		          android:textSize="@dimen/header"
		          android:textColor="@color/black"
		          android:layout_weight="1"
		          android:layout_marginLeft="10dp"/>

		<TextView android:id="@+id/keyHeadset"
		          android:layout_width="0dp"
		          android:layout_height="wrap_content"
		          android:background="@color/red"
		          android:textSize="@dimen/header"
		          android:layout_weight="1"
		          android:layout_marginRight="10dp"/>

	</LinearLayout>

	<LinearLayout
			android:orientation="horizontal"
			android:layout_width="fill_parent"
			android:layout_height="0dp" android:layout_weight="3" android:layout_marginTop="10dp"
			android:id="@+id/llHeadsetRecord"
			android:visibility="invisible">
		<Button
				android:layout_width="0dp"
				android:layout_height="fill_parent"
				android:text="@string/start_record"
				android:id="@+id/btHeadsetRecord" style="@android:style/Widget.Button" android:layout_weight="1"
				android:textSize="@dimen/buttonText"/>
		<Button
				android:layout_width="0dp"
				android:layout_height="fill_parent"
				android:text="@string/start_play"
				android:id="@+id/btHeadsetPlay" style="@android:style/Widget.Button" android:layout_weight="1"
				android:singleLine="false"
				android:textSize="@dimen/buttonText"/>
	</LinearLayout>

	<include layout="@layout/bottom_button" />

</LinearLayout>