<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent" android:background="@color/bg">

	<LinearLayout
			android:orientation="horizontal"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content">

		<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/led_current"
				android:textSize="@dimen/header"
				android:textColor="@color/black"/>

		<TextView
				android:layout_width="50dp"
				android:layout_height="wrap_content"
				android:id="@+id/tvLED"
				android:layout_marginLeft="10dp"
				android:background="@color/black"
				android:textSize="@dimen/header"/>
	</LinearLayout>

	<Button
		android:id="@+id/btLedRed"
		android:text="@string/led_red_open"
		android:layout_width="fill_parent"
		android:layout_height="0dip"
		android:layout_weight="1"
		android:onClick="onClickLedRed"
		style="@android:style/Widget.Button"
		android:textSize="@dimen/buttonText"/>

	<Button
		android:id="@+id/btLedGreen"
		android:text="@string/led_green_open"
		android:layout_width="fill_parent"
		android:layout_height="0dip"
		android:layout_weight="1"
		android:onClick="onClickLedGreen" style="@android:style/Widget.Button"
		android:textSize="@dimen/buttonText"/>

	<Button
		android:id="@+id/btLedBlue"
		android:text="@string/led_blue_open"
		android:layout_width="fill_parent"
		android:layout_height="0dip"
		android:layout_weight="1"
		android:onClick="onClickLedBlue" style="@android:style/Widget.Button"
		android:textSize="@dimen/buttonText"/>

	<include layout="@layout/bottom_button" />

</LinearLayout>