<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical" android:background="@color/bg">


	<TextView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/lightsensor_prompt"
			android:textColor="@color/black" android:background="@color/widget" android:textSize="@dimen/header"/>

	<LinearLayout
			android:orientation="horizontal"
			android:layout_width="fill_parent"
			android:layout_height="0dp"
			android:layout_weight="1">

		<TextView
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:text="@string/light_strength"
				android:textSize="@dimen/header"
				android:textColor="@color/black"
				android:layout_marginTop="10dp"
				android:layout_weight="1"/>

		<TextView
				android:id="@+id/lightsensor"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:text="@string/no_response"
				android:textSize="@dimen/header"
				android:textColor="@color/black"
				android:layout_marginTop="10dp"
				android:layout_weight="1"/>
	</LinearLayout>

	<include layout="@layout/bottom_button" />

</LinearLayout>