<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent" android:background="@color/bg">

	<TextView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/psensor_prompt"
			android:textSize="@dimen/header" android:textColor="@android:color/holo_red_dark" android:background="@color/widget"/>

	<LinearLayout
			android:orientation="horizontal"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="10dp">

		<TextView
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:text="@string/psensor_distance"
				android:textSize="@dimen/header"
				android:textColor="@color/black"
				android:layout_weight="1"/>

		<TextView
				android:id="@+id/tvProxSensor"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:textSize="@dimen/header"
				android:textColor="@color/black"
				android:layout_weight="1"/>
	</LinearLayout>

	<TextView
			android:layout_width="fill_parent"
			android:layout_height="0dp"
			android:text="@string/success"
			android:id="@+id/tvProxSuccess"
			android:layout_weight="1"
			android:textColor="@color/green"
			android:textSize="@dimen/header"
			android:gravity="center"
			android:visibility="invisible"/>

	<include layout="@layout/bottom_button" />

</LinearLayout>