<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical" android:background="@color/bg">

	<TextView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/usb_prompt"
			android:textSize="@dimen/header" android:textColor="@color/black" android:background="@color/widget"/>

	<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="0dip"
			android:layout_weight="1" android:layout_marginTop="10dp"
			android:orientation="vertical">

		<LinearLayout
				android:orientation="horizontal"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content">

			<TextView
					android:layout_width="0dip"
					android:layout_height="fill_parent"
					android:layout_weight="1"
					android:text="@string/usb_status"
					android:textSize="@dimen/header"
					android:textColor="@color/black"/>

			<TextView
					android:id="@+id/tvUsbAccessory"
					android:layout_width="0dip"
					android:layout_height="fill_parent"
					android:layout_weight="1"
					android:text="@string/usb_unplugged"
					android:textSize="@dimen/header"
					android:textColor="@color/black"/>
		</LinearLayout>

		<!--
		<TextView
			android:id="@+id/tvUsbHost"
			android:layout_width="0dip"
			android:layout_height="fill_parent"
			android:layout_weight="1"
			android:text="USB Host状态:未插入"
			android:textSize="20dip" />
		-->

	</LinearLayout>

	<include layout="@layout/bottom_button" />

</LinearLayout>