<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical" android:background="@color/bg">


	<LinearLayout
			android:orientation="vertical"
			android:layout_width="fill_parent"
			android:layout_height="0dp"
			android:layout_weight="1">

		<LinearLayout
				android:orientation="horizontal"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content">

			<TextView
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:text="@string/battery_capacity"
					android:textSize="@dimen/header"
					android:textColor="@color/black"
					android:layout_marginTop="10dp"
					android:layout_marginBottom="10dp"
					android:layout_weight="1">
			</TextView>

			<TextView
					android:id="@+id/tvBatteryCapacity"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:text="@string/no_response"
					android:textSize="@dimen/header"
					android:textColor="@color/black"
					android:layout_marginTop="10dp"
					android:layout_marginBottom="10dp"
					android:layout_weight="1"/>
		</LinearLayout>

		<LinearLayout
				android:orientation="horizontal"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content">

			<TextView
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:text="@string/battery_max"
					android:textSize="@dimen/header"
					android:textColor="@color/black"
					android:layout_marginTop="10dp"
					android:layout_marginBottom="10dp"
					android:layout_weight="1"/>

			<TextView
					android:id="@+id/tvbatteryMax"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:text="@string/no_response"
					android:textSize="@dimen/header"
					android:textColor="@color/black"
					android:layout_marginTop="10dp"
					android:layout_marginBottom="10dp"
					android:layout_weight="1"/>
		</LinearLayout>

		<LinearLayout
				android:orientation="horizontal"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content">

			<TextView
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:text="@string/battery_temperature"
					android:textSize="@dimen/header"
					android:textColor="@color/black"
					android:layout_marginTop="10dp"
					android:layout_marginBottom="10dp"
					android:layout_weight="1"/>

			<TextView
					android:id="@+id/tvBatteryTemperature"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:text="@string/no_response"
					android:textSize="@dimen/header"
					android:textColor="@color/black"
					android:layout_marginTop="10dp"
					android:layout_marginBottom="10dp"
					android:layout_weight="1"/>
		</LinearLayout>

		<LinearLayout
				android:orientation="horizontal"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content">

			<TextView
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:text="@string/battery_voltage"
					android:textSize="@dimen/header"
					android:textColor="@color/black"
					android:layout_marginTop="10dp"
					android:layout_marginBottom="10dp"
					android:layout_weight="1"/>

			<TextView
					android:id="@+id/tvBatteryVoltage"
					android:layout_width="0dp"
					android:layout_height="wrap_content"
					android:text="@string/no_response"
					android:textSize="@dimen/header"
					android:textColor="@color/black"
					android:layout_marginTop="10dp"
					android:layout_marginBottom="10dp"
					android:layout_weight="1"/>
		</LinearLayout>

	</LinearLayout>

	<include layout="@layout/bottom_button" />

</LinearLayout>